<resources>
    <string name="app_name">Smart Pantry Manager</string>

    <string name="title_pantry">My Pantry</string>
    <string name="title_add_item">Add Ingredient</string>
    <string name="title_edit_item">Edit Ingredient</string>
    <string name="title_suggested_recipes">Suggested Recipes</string>
    <string name="title_recipe_detail">Recipe</string>
    <string name="title_settings">Settings</string>

    <string name="empty_pantry">Your pantry is empty. Tap + to add your first ingredient.</string>
    <string name="empty_suggestions">No recipes match your pantry yet - add more ingredients.</string>
    <string name="empty_almost_there">Nothing is close yet - keep adding ingredients!</string>
    <string name="almost_there_header">Almost There (missing 1 ingredient)</string>

    <string name="label_name">Ingredient name</string>
    <string name="label_quantity">Quantity</string>
    <string name="label_unit">Unit (e.g. g, ml, pc)</string>
    <string name="label_expiry">Expiry date (optional)</string>
    <string name="item_expiry_label">Expires</string>

    <string name="error_name_required">Please enter an ingredient name</string>
    <string name="error_quantity_invalid">Enter a quantity greater than 0</string>
    <string name="error_unit_required">Please enter a unit</string>

    <string name="btn_save">Save</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_cancel">Cancel</string>

    <string name="delete_confirm_title">Delete ingredient?</string>
    <string name="delete_confirm_message">This will remove %1$s from your pantry.</string>

    <string name="pref_expiry_alerts">Alert me about expiring-soon ingredients</string>
    <string name="pref_units">Preferred units</string>
    <string name="pref_units_metric">Metric (g, ml, kg, l)</string>
    <string name="pref_units_imperial">Imperial (oz, cups, lb)</string>

    <string name="nav_pantry">Pantry</string>
    <string name="nav_recipes">Recipes</string>
    <string name="nav_settings">Settings</string>

    <string name="ingredients_header">Ingredients</string>
    <string name="method_header">Method</string>
</resources>
