<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/pantry_primary"
        android:title="@string/title_settings"
        app:titleTextColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_expiry_alerts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_expiry_alerts" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/pref_units"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radio_units"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <RadioButton
                android:id="@+id/radio_metric"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pref_units_metric" />

            <RadioButton
                android:id="@+id/radio_imperial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pref_units_imperial" />

        </RadioGroup>

    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_nav_menu"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
